--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
   <title>Raymond Arceneaux</title>
 </head>
 <body>
+<div class="content"  
    <!-- Navigation -->
    <nav>
   <h1 id="myName">Raymond Arceneaux, MBA</h1>
     <ul id="navLinks">
-      <li><a id="navToBio">Bio</a></li>
-      <li><a id="navToTechnologies">Technologies</a></li>
-      <li><a id="navToProjects">Projects</a></li>
+      <a  id="navToBio">Bio</a>
+      <a  id="navToTechnologies">Technologies</a>
+      <a  id="navToProjects">Projects</a>
     </ul>
   </nav>
   <!-- End Navigation -->
+  
 
   <!-- Primary View -->
   <div class="fullPage" id="bioPage">
@@ -29,14 +31,14 @@
   </div>
   <div class="fullPage" id="projectsPage"></div>
   <!-- End Primary View -->
-
+</div>
   <!-- Footer -->
-  <footer class="page-footer">
+  <footer class="page-footer">© 2019 Raymond Arceneaux 💻 NSS e10 </footer>
     <!-- TODO: Fill in contact info here: Include things like email, LinkedIn, Twitter and GitHub links. -->
-  </footer>
-  <!-- End Footer --> 
+  
+  <!-- End Footer 
 
-
+<div id="toys"></div> -->
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
