--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <title>Raymond Arceneaux</title>
 </head>
 <body>
-<div class="content"  
-   <!-- Navigation -->
+ 
+  
    <nav>
   <h1 id="myName">Raymond Arceneaux, MBA</h1>
     <ul id="navLinks">
@@ -31,18 +31,15 @@
   </div>
   <div class="fullPage" id="projectsPage"></div>
   <!-- End Primary View -->
-</div>
+
   <!-- Footer -->
-  <footer class="page-footer">© 2019 Raymond Arceneaux 💻 NSS e10 </footer>
+  <!-- <footer class="page-footer">© 2019 Raymond Arceneaux 💻 NSS e10 </footer> -->
     <!-- TODO: Fill in contact info here: Include things like email, LinkedIn, Twitter and GitHub links. -->
   
   <!-- End Footer 
 
 <div id="toys"></div> -->
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="./projects.js"></script>
 </body>
 </html>
