added only one .addEventListener

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <title>Raymond Arceneaux</title>
 </head>
 <body>
- 
+ <div class="content">
   
    <nav>
   <h1 id="myName">Raymond Arceneaux, MBA</h1>
     <ul id="navLinks">
-      <a  id="navToBio">Bio</a>
-      <a  id="navToTechnologies">Technologies</a>
-      <a  id="navToProjects">Projects</a>
+      <a href="" id="navToBio">Bio</a>
+      <a href="" id="navToTechnologies">Technologies</a>
+      <a href="" id="navToProjects">Projects</a>
     </ul>
   </nav>
   <!-- End Navigation -->
@@ -31,9 +31,9 @@
   </div>
   <div class="fullPage" id="projectsPage"></div>
   <!-- End Primary View -->
-
+</div>
   <!-- Footer -->
-  <!-- <footer class="page-footer">© 2019 Raymond Arceneaux 💻 NSS e10 </footer> -->
+  <footer class="page-footer">© 2019 Raymond Arceneaux 💻 NSS e10 </footer>
     <!-- TODO: Fill in contact info here: Include things like email, LinkedIn, Twitter and GitHub links. -->
   
   <!-- End Footer 
