--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   <div class="fullPage" id="bioPage">
     <!-- TODO: Fill in bio info here: What is your background? Why do you want to go into development? What do you love about development? -->
   </div>
-  <div class="fullPage" id="technologiesPage">
+  <div class="fullPage hidden" id="technologiesPage">
     <!-- TODO: Start an UL of all of the tools and technologies you've started learning so far. (You'll beef this page up later). -->
   </div>
-  <div class="fullPage" id="projectsPage"></div>
+  <div class="fullPage hidden" id="projectsPage"></div>
   <!-- End Primary View -->
 </div>
   <!-- Footer -->
