took off footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Raymond Arceneaux</title>
 </head>
 <body>
- <div class="content">
+ 
   
    <nav>
   <h1 id="myName">Raymond Arceneaux, MBA</h1>
@@ -31,15 +31,14 @@
   </div>
   <div class="fullPage hidden" id="projectsPage"></div>
   <!-- End Primary View -->
-</div>
+
   <!-- Footer -->
-  <footer class="page-footer">© 2019 Raymond Arceneaux 💻 NSS e10 </footer>
+  <!-- <footer class="page-footer">© 2019 Raymond Arceneaux 💻 NSS e10 </footer> -->
     <!-- TODO: Fill in contact info here: Include things like email, LinkedIn, Twitter and GitHub links. -->
   
   <!-- End Footer 
 
-<div id="toys"></div> -->
 
-<script src="./projects.js"></script>
+ 
 </body>
 </html>
