linked projects.js

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
   
 
   <!-- Primary View -->
-  <div class="fullPage" id="bioPage">
+  <div class="fullPage bio" id="bioPage">
     <!-- TODO: Fill in bio info here: What is your background? Why do you want to go into development? What do you love about development? -->
+    Born and raised in Nashville, TN where I was raised in a single-family household until the age of 9. 
+  
+  
   </div>
   <div class="fullPage hidden" id="technologiesPage">
     <!-- TODO: Start an UL of all of the tools and technologies you've started learning so far. (You'll beef this page up later). -->
@@ -33,12 +36,12 @@
   <!-- End Primary View -->
 
   <!-- Footer -->
-  <!-- <footer class="page-footer">© 2019 Raymond Arceneaux 💻 NSS e10 </footer> -->
+  <footer class="page-footer">© 2019 Raymond Arceneaux 💻 NSS e10 </footer>
     <!-- TODO: Fill in contact info here: Include things like email, LinkedIn, Twitter and GitHub links. -->
   
-  <!-- End Footer 
+  <!-- End Footer -->
 
 
- 
+<script src=./projects.js></script>
 </body>
 </html>
