--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="./main.css">
+  <script src="https://kit.fontawesome.com/20e1031ab2.js" crossorigin="anonymous"></script>
   <title>Raymond Arceneaux</title>
 </head>
 <body>
- 
+ <div class="content">
   
    <nav>
   <h1 id="myName">Raymond Arceneaux, MBA</h1>
@@ -23,25 +24,50 @@
   
 
   <!-- Primary View -->
-  <div class="fullPage bio" id="bioPage">
+  <div class="fullPage " id="bioPage">
     <!-- TODO: Fill in bio info here: What is your background? Why do you want to go into development? What do you love about development? -->
-    Born and raised in Nashville, TN where I was raised in a single-family household until the age of 9. 
+    <div class="container">
+
+
+    </div>
   
   
+
+    
   </div>
   <div class="fullPage hidden" id="technologiesPage">
     <!-- TODO: Start an UL of all of the tools and technologies you've started learning so far. (You'll beef this page up later). -->
   </div>
+
+
+
+
+
+
+
+
+
   <div class="fullPage hidden" id="projectsPage"></div>
   <!-- End Primary View -->
-
+ </div>
   <!-- Footer -->
-  <footer class="page-footer">© 2019 Raymond Arceneaux 💻 NSS e10 </footer>
+  <footer class="page-footer"> 
+    <div class="d-flex justify-content-around">
+      <a href=""><i class="fab fa-linkedin fa-3x"></i></a>
+      <a href=""><i class="fab fa-github-square fa-3x"></i></a>
+      <a href=""><i class="fab fa-twitter-square fa-3x"></i></a>
+      <a href=""><i class="fab fa-youtube-square fa-3x"></i></a>
+    </div>
+    <p>© 2019 Raymond Arceneaux NSS e10 All Rights Reserved.</p>
+  </footer>
     <!-- TODO: Fill in contact info here: Include things like email, LinkedIn, Twitter and GitHub links. -->
   
   <!-- End Footer -->
 
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src=./projects.js></script>
 
-<script src=./projects.js></script>
 </body>
 </html>
