--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="./main.css">
   <script src="https://kit.fontawesome.com/20e1031ab2.js" crossorigin="anonymous"></script>
-  <title>Raymond Arceneaux</title>
+  <title>Raymond Arceneaux, MBA</title>
+  <link rel="icon" href="images/laptop.png">
 </head>
 <body>
  <div class="content">
   
    <nav>
-  <h1 id="myName">Raymond Arceneaux, MBA</h1>
-    <ul id="navLinks">
+     <ul id="navLinks">
+       <h1 id="myName">Raymond Arceneaux, MBA</h1>
       <a href="" id="navToBio">Bio</a>
       <a href="" id="navToTechnologies">Technologies</a>
       <a href="" id="navToProjects">Projects</a>
@@ -24,18 +25,15 @@
   
 
   <!-- Primary View -->
-  <div class="fullPage " id="bioPage">
+  <div class="fullPage" id="bioPage">
     <!-- TODO: Fill in bio info here: What is your background? Why do you want to go into development? What do you love about development? -->
-    <div class="container">
 
-
-    </div>
   
   
 
     
   </div>
-  <div class="fullPage hidden" id="technologiesPage">
+  <div class="fullPage" id="technologiesPage">
     <!-- TODO: Start an UL of all of the tools and technologies you've started learning so far. (You'll beef this page up later). -->
   </div>
 
@@ -43,22 +41,18 @@
 
 
 
-
-
-
-
-  <div class="fullPage hidden" id="projectsPage"></div>
+  <div class="fullPage flex-fix" id="projectsPage"></div>
   <!-- End Primary View -->
  </div>
   <!-- Footer -->
   <footer class="page-footer"> 
     <div class="d-flex justify-content-around">
-      <a href=""><i class="fab fa-linkedin fa-3x"></i></a>
-      <a href=""><i class="fab fa-github-square fa-3x"></i></a>
-      <a href=""><i class="fab fa-twitter-square fa-3x"></i></a>
-      <a href=""><i class="fab fa-youtube-square fa-3x"></i></a>
+      <a href="https://www.linkedin.com/in/raymond-arceneaux-mba-99a070156/"><i class="fab fa-linkedin fa-3x"></i></a>
+      <a href="https://github.com/rarceneaux"><i class="fab fa-github-square fa-3x"></i></a>
+      <a href="https://twitter.com/thelasthustle"><i class="fab fa-twitter-square fa-3x"></i></a>
+      <a href="https://www.youtube.com/channel/UCP4ZbrvuNZzwdh0BcAGMFVQ"><i class="fab fa-youtube-square fa-3x"></i></a>
     </div>
-    <p>© 2019 Raymond Arceneaux NSS e10 All Rights Reserved.</p>
+    <p>© 2019 Raymond Arceneaux, MBA NSS e10 All Rights Reserved.</p>
   </footer>
     <!-- TODO: Fill in contact info here: Include things like email, LinkedIn, Twitter and GitHub links. -->
   
