updated bio page

--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
 </head>
 <body>
  <div class="content">
-  
+  <div id="myName" class="text-center"><h1>Raymond Arceneaux, MBA</h1></div>
    <nav>
+     
      <ul id="navLinks">
-       <h1 id="myName">Raymond Arceneaux, MBA</h1>
       <a href="" id="navToBio">Bio</a>
       <a href="" id="navToTechnologies">Technologies</a>
       <a href="" id="navToProjects">Projects</a>
     </ul>
   </nav>
   <!-- End Navigation -->
-  
 
   <!-- Primary View -->
   <div class="fullPage" id="bioPage">
